config-root/namespaces/jx/jx-ui/jx-ui-deploy.yaml
# Source: jx-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx-ui
  labels:
    app.kubernetes.io/name: jx-ui
    app.kubernetes.io/instance: "jx-ui"
    helm.sh/chart: jx-ui-0.0.19
    app.kubernetes.io/version: "0.0.19"
    app.kubernetes.io/managed-by: "Helm"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx-ui'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jx-ui
      app.kubernetes.io/instance: "jx-ui"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jx-ui
        app.kubernetes.io/instance: "jx-ui"
        helm.sh/chart: jx-ui-0.0.19
        app.kubernetes.io/version: "0.0.19"
        app.kubernetes.io/managed-by: "Helm"
    spec:
      containers:
      - name: jx-ui
        image: "ghcr.io/jenkins-x/jx-ui:0.0.19"
        ports:
        - name: http
          containerPort: 9200
        livenessProbe:
          tcpSocket:
            port: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
        volumeMounts:
        - mountPath: /secrets/git
          name: secrets-git
        resources:
          limits:
            cpu: "1"
            memory: 512M
          requests:
            cpu: "0.2"
            memory: 128M
      securityContext:
        fsGroup: 1000
      serviceAccountName: jx-ui
      enableServiceLinks: false
      volumes:
      - name: secrets-git
        secret:
          defaultMode: 420
          secretName: tekton-git
