config-root/namespaces/jx/jx-ui/jx-ui-svc.yaml
# Source: jx-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jx-ui
  labels:
    app.kubernetes.io/name: jx-ui
    app.kubernetes.io/instance: "jx-ui"
    helm.sh/chart: jx-ui-0.0.19
    app.kubernetes.io/version: "0.0.19"
    app.kubernetes.io/managed-by: "Helm"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx-ui'
  namespace: jx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 9200
    nodePort: 30007
  selector:
    app.kubernetes.io/name: jx-ui
    app.kubernetes.io/instance: "jx-ui"
