config-root/namespaces/jx/jx-ui/jx-ui-ingress.yaml
# Source: jx-ui/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jx-ui
  labels:
    app.kubernetes.io/name: jx-ui
    app.kubernetes.io/instance: "jx-ui"
    helm.sh/chart: jx-ui-0.0.17
    app.kubernetes.io/version: "0.0.17"
    app.kubernetes.io/managed-by: "Helm"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - Jenkins X UI
    nginx.ingress.kubernetes.io/auth-secret: jx-basic-auth-htpasswd
    nginx.ingress.kubernetes.io/auth-type: basic
    meta.helm.sh/release-name: 'jx-ui'
  namespace: jx
spec:
  rules:
  - host: dashboard.jx.change.me
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: jx-ui
            port:
              name: http
